[package]
name = "sidbang64"
version = "0.6.0"
authors = ["sab@goarana.com"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
cpal = "0.11.0"
resid-rs = "1.0.1"
triple_buffer = {version = "4.0.1", features=["raw"]}
serde = {version = "1.0.89", features=["serde_derive"]}
serde_json = "1.0"
conrod = "0.61.1"
conrod_core = "0.68.0"
conrod_glium = "0.68.0"
conrod_winit = "0.68.0"
find_folder = "0.3.0"
glium = "0.24"
winit = "0.19"
image = "0.22"
rand = "0.7"
hound = "3.4.0"
rustfft = "3.0.1"

