[package]
name = "sidbang64"
version = "0.6.1"
authors = ["sab@goarana.com"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
cpal = "0.11.0"
resid-rs = "1.0.4"
triple_buffer = {version = "4.0.1", features=["raw"]}
serde = {version = "1.0.123", features=["serde_derive"]}
serde_json = "1.0.61"
conrod = "0.62.1"
conrod_core = "0.71.0"
conrod_glium = "0.71.0"
conrod_winit = "0.71.0"
find_folder = "0.3.0"
glium = "0.28"
winit = "0.23"
image = "0.23.12"
rand = "0.8.3"
hound = "3.4.0"
rustfft = "5.0.1"

